--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <img src="./images/trang-chu/professional-tea-1.png" alt="">
                         </div>
                         <div class="artist-name">
-                            <p>TRÀ ƯỚP BÔNG SEN</p>
+                            <p>Nn. Nguyễn Cao Sơn</p>
                         </div>
                     </div>
                     <div class="artist-card">
