--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <img src="./images/trang-chu/fotter.png" alt="imm" class="img w-100">
             </div>
             <div class="footer-content">
-                <!-- <ul>
+                <ul>
                     <li>
                         <div><img src="./images/trang-chu/logophongtra.png" alt=""></div>
                     </li>
@@ -244,14 +244,14 @@
                     <li>
                         <p>Tra Sen Bach Diep. All rights reserved</p>
                     </li>
-                </ul> -->
-                <table>
+                </ul>
+                <!-- <table>
                     <tr>
                         <th><div><img src="./images/trang-chu/logophongtra.png" alt=""></div></th>
                         <th><p>VỀ CHÚNG TÔI</p></th>
                         <th><p>LIÊN HỆ</p></th>
                     </tr>
-                </table>
+                </table> -->
             </div>
         </div>
         </div>
