--- a/index.html
+++ b/index.html
@@ -6,27 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/layout.css">
+    <script src="./js/header_footer.js"></script>
     <title>Trà sen Bách Diệp</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div class="logo-nav">
-                <a href="#"><img src="./images/trang-chu/logophongtra.png" alt="" class="logo"></a>
-            </div>
-            <div class="nav-header">
-                <ul class="nav-menu">
-                    <li class="nav-menu-list"><a href="#">Trang chủ</a></li>
-                    <li class="nav-menu-list"><a href="#">Giới thiệu</a></li>
-                    <li class="nav-menu-list"><a href="#">Sản phẩm</a></li>
-                    <li class="nav-menu-list"><a href="#">Tin tức</a></li>
-                    <li class="nav-menu-list"><a href="#">Liên hệ</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
+    <div id="headerContainer"></div>
     <section>
         <div class="banner">
             <div class="banner-img">
@@ -205,58 +190,7 @@
             </div>
         </div>
     </section>
-
-    <footer>
-        <div class="footer">
-            <div class="footer-background">
-                <img src="./images/trang-chu/fotter.png" alt="imm" class="img w-100">
-            </div>
-            <div class="footer-content">
-                <ul>
-                    <li>
-                        <div><img src="./images/trang-chu/logophongtra.png" alt=""></div>
-                    </li>
-                    <li>
-                        <p>0853.885.203</p>
-                    </li>
-                    <li>
-                        <p>trasenbachdiep@gmail.com</p>
-                    </li>
-                    <li>
-                        <p>Số 12, Quảng An, Tây Hồ, Hà Nội.</p>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <p>VỀ CHÚNG TÔI</p>
-                    </li>
-                    <li><a href="#">Giới thiệu</a></li>
-                    <li><a href="#">Sản phẩm</a></li>
-                    <li><a href="#">Tin tức</a></li>
-                </ul>
-                <ul>
-                    <li>
-                        <p>LIÊN HỆ</p>
-                    </li>
-                    <li>
-                        <p>CopyRight 2010-2023</p>
-                    </li>
-                    <li>
-                        <p>Tra Sen Bach Diep. All rights reserved</p>
-                    </li>
-                </ul>
-                <!-- <table>
-                    <tr>
-                        <th><div><img src="./images/trang-chu/logophongtra.png" alt=""></div></th>
-                        <th><p>VỀ CHÚNG TÔI</p></th>
-                        <th><p>LIÊN HỆ</p></th>
-                    </tr>
-                </table> -->
-            </div>
-        </div>
-        </div>
-    </footer>
-
+    <div id="footerContainer"></div>
 </body>
 
 </html>
